removing magic links with goggle sign in
